--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "typescript": "3.2.4"
   },
   "scripts": {
